Updates version to 0.21.8 and migrates update URL from SourceForge to yapbam.net
- Increments version from 0.21.7 to 0.21.8
- Updates java-check-launcher dependency from 1.0.1 to 1.0.2
- Migrates update info URL from SourceForge to yapbam.net (SourceForge dropped dynamic web site support)
- Introduces UrlBuilder utility class for constructing URLs with query parameters
- Refactors ApplicationContext.toURL() to use UrlBuilder for cleaner parameter handling
- Adds unit tests for VersionManager and UrlBuilder